--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <!-- Nav Bar -->
       <nav class="navbar  navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="https://www.instagram.com/snappy_happie/">Snapy Art Community</a><i class="fa fa-registered" aria-hidden="true"></i>
+        <a class="navbar-brand" href="https://www.instagram.com/snappy_happie/">Snapy Art Community <i class="fa fa-registered" aria-hidden="true"></i></a><i class="fa fa-registered" aria-hidden="true"></i>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
