--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <a href=""></a>
+    <p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p>
     <i class="fab fa-facebook"><a href="https://www.facebook.com/profile.php?id=100009839313005"></a></i>
     <i class="fab fa-twitter"><a href="#"></a></i>
     <i class="fab fa-instagram-square"><a href="#"></a></i>
