--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p>
-    <i class="fab fa-facebook"><a href="https://www.facebook.com/profile.php?id=100009839313005"></a></i>
-    <i class="fab fa-twitter"><a href="#"></a></i>
-    <i class="fab fa-instagram-square"><a href="#"></a></i>
-    <i class="fas fa-envelope"><a href="#"></a></i>
+    <i class="fa fa-wrench fa-1x" aria-hidden="true"></i><p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p>
+    <i class="fab fa-facebook"></i>
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-instagram-square"></i>
+    <i class="fas fa-envelope"></i>
    
    <p>© Copyright 2020 Pannaga Shastri</p>
 
