--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="fa fa-wrench fa-1x" aria-hidden="true"></i><p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p>
-    <i class="fab fa-facebook"></i>
+    <i class="fa fa-wrench" aria-hidden="true"<p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p></i>
+    <i class="fab fa-facebook"></i>ontact</p>
     <i class="fab fa-twitter"></i>
     <i class="fab fa-instagram-square"></i>
     <i class="fas fa-envelope"></i>
