--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="fa fa-wrench" aria-hidden="true"<p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p></i>
+    <i class="fa fa-wrench" aria-hidden="true"<p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p></i><br>
     <i class="fab fa-facebook"></i>ontact</p>
     <i class="fab fa-twitter"></i>
     <i class="fab fa-instagram-square"></i>
