--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <!-- Nav Bar -->
       <nav class="navbar  navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="https://www.instagram.com/snappy_happie/">Snapy Art Community</a>
+        <a class="navbar-brand" href="https://www.instagram.com/snappy_happie/">Snapy Art Community</a><i class="fa fa-registered fa-1x" aria-hidden="true"></i>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -241,12 +241,14 @@
 
   <footer id="footer">
     <i class="fa fa-wrench" aria-hidden="true"<p> App not setup: This app is still in development mode untill follow the instagram and facebook above on contact</p></i><br>
-    <i class="fab fa-facebook"></i>ontact</p>
-    <i class="fab fa-twitter"></i>
-    <i class="fab fa-instagram-square"></i>
-    <i class="fas fa-envelope"></i>
-   
-   <p>© Copyright 2020 Pannaga Shastri</p>
+    <i class="fab fa-facebook"><a href="https://www.facebook.com/profile.php?id=100009839313005"></a></i>
+    <i class="fab fa-twitter"><a href="#"></a></i>
+    <i class="fab fa-instagram-square"><a href="#"></a></i>
+    <i class="fas fa-envelope"><a href="#"></a></i>
+
+
+
+    <p>© Copyright 2020 Pannaga Shastri</p>
 
   </footer>
 
